; ModuleID = '/home/carl/AnghaBench/php-src/ext/spl/extr_spl_directory.c_spl_filesystem_object_get_method_check.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/spl/extr_spl_directory.c_spl_filesystem_object_get_method_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32*, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32* }

@.str = private unnamed_addr constant [14 x i8] c"_bad_state_ex\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @spl_filesystem_object_get_method_check(i32** %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_7__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i32** %0, i32*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %11 = load i32**, i32*** %5, align 8
  %12 = load i32*, i32** %11, align 8
  %13 = call %struct.TYPE_7__* @spl_filesystem_from_obj(i32* %12)
  store %struct.TYPE_7__* %13, %struct.TYPE_7__** %8, align 8
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %33

20:                                               ; preds = %3
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = icmp eq i32* %23, null
  br i1 %24, label %25, label %33

25:                                               ; preds = %20
  %26 = call i32* @zend_string_init(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 13, i32 0)
  store i32* %26, i32** %10, align 8
  %27 = load i32**, i32*** %5, align 8
  %28 = load i32*, i32** %10, align 8
  %29 = call i32* @zend_std_get_method(i32** %27, i32* %28, i32* null)
  store i32* %29, i32** %9, align 8
  %30 = load i32*, i32** %10, align 8
  %31 = call i32 @zend_string_release_ex(i32* %30, i32 0)
  %32 = load i32*, i32** %9, align 8
  store i32* %32, i32** %4, align 8
  br label %38

33:                                               ; preds = %20, %3
  %34 = load i32**, i32*** %5, align 8
  %35 = load i32*, i32** %6, align 8
  %36 = load i32*, i32** %7, align 8
  %37 = call i32* @zend_std_get_method(i32** %34, i32* %35, i32* %36)
  store i32* %37, i32** %4, align 8
  br label %38

38:                                               ; preds = %33, %25
  %39 = load i32*, i32** %4, align 8
  ret i32* %39
}

declare dso_local %struct.TYPE_7__* @spl_filesystem_from_obj(i32*) #1

declare dso_local i32* @zend_string_init(i8*, i32, i32) #1

declare dso_local i32* @zend_std_get_method(i32**, i32*, i32*) #1

declare dso_local i32 @zend_string_release_ex(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
